[metadata]
name = pan-threat-vault-python
version = attr: pantv.__version__
author = Palo Alto Networks, Inc.
author_email = devrel@paloaltonetworks.com
description = Python interface to the Palo Alto Networks Threat Vault API
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/PaloAltoNetworks/pan-threat-vault-python
license = ISC
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: ISC License (ISCL)

[options]
packages = pantv
scripts =
    bin/tvapi.py
install_requires =
    aiohttp>=3.8.1
    requests>=2.27.1
python_requires = >=3.7
